Wed Jul  2 14:59:29 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* HTTP_Helpers.cpp (HTTP_decode_string): Added cast from strtol to
 	  char explicitly to prevent NT from complaining.

Wed Jul  2 14:33:27 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.{h.cpp}: Modifications to support RW_MUTEX for both
	  the virtual filesystem and the low level ACE_File.  Next major
	  change will be to re-implement the virtual filesystem to use a
	  hash table ala ACE_Hash_Map_Manager.

Wed Jul  2 00:23:22 1997  James C Hu  <jxh@polka.cs.wustl.edu>

	* HTTP_Server.{h,cpp}: Changed parsing of options to use
	  mnemonic names rather than numbers.  Added a new thread
	  strategy, THROTTLE.  This is thread-per-request until some
	  maximum number.  Unfortunately, it does not become thread-pool
	  at this point... yet :-).  Added a new option to pass in a
	  backlog value.

	* svc.conf: adjusted to account for the changed options.

	* README: changed to explain new svc.conf options.

	* JAWS_File.cpp: Changed it so that when the file is added to the
	  cache, it is also acquired.  When it is removed from the cache,
	  it is released.  This is so that the reference count is at least
	  one while the file is in the cache.  Also, fixed the virtual
	  filesystem by giving it a simple replacement strategy if the
	  table is full.  For now, it will replace the largest file in the
	  cache with the request for the current file.

Tue Jul  1 19:13:44 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* JAWS_File.cpp (JAWS_File): Changes the creation method of a
 	  cached copy from using plain file copy to using mmap and memcpy.
  	  This avoid the extra complexity caused by FILE_FLAG_OVERLAPPED.

Sat Jun 28 11:55:38 1997  James C Hu <jxh@tango.cs.wustl.edu>

	* HTTP_Handler.cpp (open): fixed a typo

	* HTTP_Handler.cpp (cgi): fixed a bug, strdup fails on NULL

Sat Jun 28 16:14:38 1997  Sumedh Mungee  <sumedh@cumbia.cs.wustl.edu>
